--- a/inventory.ini
+++ b/inventory.ini
@@ -1,6 +1,17 @@
 # Ansible inventory file, deliberately empty. Please add the hostnames
 # of your computers to the appropriate sections.
 
+[all:vars]
+domain_name = 
+email_address = 
+alternates = 
+smtp_server = 
+smtp_username = 
+smtp_password = 
+imap_server = 
+imap_username = 
+imap_password= 
+
 [webservers]
 
 [workstations]
