Fix incorrect owner of PostgreSQL configuration file
This bug caused my cluster upgrade to fail with `Error: cluster configuration
already exists`.

See: https://stackoverflow.com/questions/72611651/how-can-i-upgrade-postgresql-from-version-11-to-version-13

--- a/roles/database/tasks/main.yml
+++ b/roles/database/tasks/main.yml
@@ -11,6 +11,8 @@
   copy:
     src: pg_hba.conf
     dest: /etc/postgresql/{{ item }}/main/
+    owner: postgres
+    mode: 0640
   notify: restart postgres
   loop:
     - 9
