--- a/inventory.ini
+++ b/inventory.ini
@@ -5,10 +5,10 @@
 domain_name = 
 email_address = 
 alternates = 
-smtp_server = 
+smtp_server = smtp.fastmail.com
 smtp_username = 
 smtp_password = 
-imap_server = 
+imap_server = imap.fastmail.com
 imap_username = 
 imap_password= 
 
