Add the remaining roles
The playbook is now complete and should work. Let's put it to the test!

--- a/inventory.ini
+++ b/inventory.ini
@@ -16,4 +16,9 @@ imap_password=
 
 [workstations]
 
+[gamestations]
+
+[kiosks]
+
+# Note: laptops must also be workstations, gamestations, or kiosks
 [laptops]
