--- a/roles/X/tasks/main.yml
+++ b/roles/X/tasks/main.yml
@@ -3,14 +3,25 @@
   apt:
     state: present
     name:
+      - chromium
+      - eog
+      - evince
+      - file-roller
+      - filelight
+      - firefox-esr
       - ghc
       - libghc-xmonad-contrib-dev
+      - mpv
       - network-manager-gnome
+      - paprefs
       - pavucontrol
       - pulseaudio
       - pulseaudio-module-zeroconf
       - rxvt-unicode
       - suckless-tools
+      - thunar
+      - trayer
+      - webext-ublock-origin
       - x11-apps
       - x11-xserver-utils
       - xcalib
@@ -33,19 +44,19 @@
     path: /usr/share/fontconfig/conf.avail/70-no-bitmaps.conf
     state: absent
 
-- name: Install system-wide Xsession
+- name: Configure Xsession
   become: true
   copy:
     src: Xsession.d/
     dest: /etc/X11/Xsession.d/
 
-- name: Install system-wide Xresources
+- name: Configure Xresources
   become: true
   copy:
     src: Xresources/
     dest: /etc/X11/Xresources/
 
-- name: Install system-wide Bash profile
+- name: Configure Bash profile
   become: true
   copy:
     src: profile.d/
@@ -63,8 +74,11 @@
     src: dotfiles/
     dest: "{{ item.dest }}"
     owner: "{{ item.owner }}"
+    force: "{{ item.force }}"
   loop:
-    - dest: ~/
+    - dest: /home/{{ ansible_user_id }}/
       owner: "{{ ansible_user_id }}"
+      force: false
     - dest: /etc/skel/
       owner: root
+      force: true
