--- a/roles/Xworkstation/tasks/main.yml
+++ b/roles/Xworkstation/tasks/main.yml
@@ -3,34 +3,15 @@
   apt:
     state: present
     name:
-      - chromium
-      - eog
-      - evince
-      - file-roller
-      - filelight
-      - firefox
       - gimp
       - inkscape
-      - keepassx
       - libreoffice
-      - mpv
-      - pdfarranger
-      - thunar
-      - transmission-gtk
-      - trayer
-      - webext-ublock-origin
       - xautolock
       - xss-lock
       - xtrlock
 
-- name: Copy dotfiles
+- name: Place Xsession configuration files
   become: true
   copy:
-    src: dotfiles/
-    dest: "{{ item.dest }}"
-    owner: "{{ item.owner }}"
-  loop:
-    - dest: ~/
-      owner: "{{ ansible_user_id }}"
-    - dest: /etc/skel/
-      owner: root
+    src: Xsession.d/
+    dest: /etc/X11/Xsession.d/
