Make mutt work without credentials
Without credentials, mutt will now get the mail from the default location,
`/var/mail/<username>`, where (perhaps not so) coincidentally the default
Exim4 configuration will deliver all system mail.

This could be considered yet another solution to https://xkcd.com/838/

--- a/inventory.ini
+++ b/inventory.ini
@@ -5,10 +5,10 @@
 domain_name = 
 email_address = 
 alternates = 
-smtp_server = smtp.fastmail.com
+smtp_server = 
 smtp_username = 
 smtp_password = 
-imap_server = imap.fastmail.com
+imap_server = 
 imap_username = 
 imap_password= 
 
