--- a/roles/X/files/10-intel.conf
+++ b/roles/X/files/10-intel.conf
@@ -1,6 +1,6 @@
-# See `man intel` for all the exciting options!
-Section "Device"
-    Identifier "Card0"
-    Driver "intel"
+# See `man intel` for all the other exciting options!
+Section "InputClass"
+    Identifier "Enable TearFree option on Intel cards"
+    MatchDriver "intel"
     Option "TearFree" "true"
 EndSection
