Dynamic Audio Normalizer

--- a/roles/X/files/dotfiles/.config/mpv/mpv.conf
+++ b/roles/X/files/dotfiles/.config/mpv/mpv.conf
@@ -1,4 +1,6 @@
 vo=gpu
 hwdec=auto
-sub-scale=0.666
 save-position-on-quit
+
+# Dynamic Audio Normalizer turns the volume knob up during quiet sections.
+af=dynaudnorm=maxgain=4
