--- a/roles/X/tasks/main.yml
+++ b/roles/X/tasks/main.yml
@@ -18,7 +18,8 @@
       - suckless-tools
       - thunar
       - trayer
-      - webext-ublock-origin
+      - webext-ublock-origin-chromium
+      - webext-ublock-origin-firefox
       - x11-apps
       - x11-xserver-utils
       - xcalib
