Add dependency for dark mode

--- a/roles/X/tasks/main.yml
+++ b/roles/X/tasks/main.yml
@@ -7,6 +7,7 @@
       - dconf-cli
       - eog
       - evince
+      - dconf-cli
       - file-roller
       - ghc
       - libghc-xmonad-contrib-dev
