Experiment with content cache

--- a/roles/webserver/files/nginx.conf
+++ b/roles/webserver/files/nginx.conf
@@ -23,6 +23,9 @@ http {
   include /etc/nginx/conf.d/*.conf;
   include /etc/nginx/sites-enabled/*;
 
+  # Experiment with content cache.
+  proxy_cache_path /var/nginx_cache keys_zone=content_cache:10m min_free=1g max_size=20g inactive=1d;
+
   server {
     listen 80 default_server;
 
